--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
     <title>landing Page</title>
 </head>
 <body>
-
-
-
-
-    <h2>Testing h2 </h2>
-    
+    <h2>Testing h2 </h2> 
+    <h3>Coba Git Lagi</h3>
 </body>
 </html>
